<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#FCC9E0">

    <!-- Avatar -->

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="0dp"
        android:scaleType="centerInside"
        android:src="@drawable/left_arrow"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/profile"
        android:textColor="#800D42"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/btn_edit"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="132dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/edit"
        android:padding="0dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_edit"
        app:layout_constraintStart_toEndOf="@id/tv_profile"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_user_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/circle_mask"
        android:clipToOutline="true"
        android:contentDescription="@string/profile"
        android:scaleType="centerCrop"
        android:src="@drawable/user_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profile" />

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_user_image">

        <!-- First Name -->
        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_shape_30"
            android:backgroundTint="@color/pink"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:text="@string/first_name"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_firstname_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:text="Văn A"
                android:textSize="20sp" />
        </LinearLayout>

        <!-- Last Name -->
        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/rectangle_shape_30"
            android:backgroundTint="@color/pink"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:text="@string/last_name"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_lastname_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Nguyễn"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <!-- Username -->
        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/rectangle_shape_30"
            android:backgroundTint="@color/pink"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_username_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="hau hau"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <!-- Gmail -->
        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/rectangle_shape_30"
            android:backgroundTint="@color/pink"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/gmail"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_gmail_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Hauhau@gmail.com"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <!-- Phone -->
        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/rectangle_shape_30"
            android:backgroundTint="@color/pink"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_phone_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="0978367256"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Upload Button -->

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_upload"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/upload"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:backgroundTint="#0EA470"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="221dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
